--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Simple todo app with vuejs",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "webpack",
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +23,7 @@
     "vue": "^2.5.2"
   },
   "devDependencies": {
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.2"
   }
 }
